--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -28,12 +28,19 @@
         width: 950px;
     }
     section#login > div#imagem{
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
     section#login > div#formluario{
-        float: right;
+        float: left;
         width: 50%; 
+    }
+    div#formluario > h1{
+        font-size: 2em;
+        
+    }
+    div#formulario > p {
+    font-size: 1.2em;
     }
 }
