--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -7,6 +7,7 @@
     }
     section#login{
         width: 80vw;
+        height: 280px;
     }
     section#login>div#imagem {
         float: left;
@@ -22,10 +23,11 @@
 @media screen and (min-width: 992px) {
     
     body{
-        background-image: linear-gradient(to top, #49a09d, #5f2c82 ) ;
+        background-image: linear-gradient(to top, #49a09d, #5f2c82 );
     }
     section#login{
         width: 950px;
+        height: 350px;
     }
     section#login > div#imagem{
         float: right;
@@ -38,9 +40,10 @@
     }
     div#formluario > h1{
         font-size: 2em;
-        
+
     }
     div#formulario > p {
-    font-size: 1.2em;
+    font-size: 1em;
+    margin: 10px 0px;
     }
 }
